// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacer should render correctly 1`] = `
"<span class=\\"\\"><style>
        span {
          display: block;
          height: 1px;
          width: 1px;
          margin-left: calc(1 * 16px + 1px * 0);
          margin-top: calc(1 * 16px + 1px * 0);
        }
      </style></span>"
`;

exports[`Spacer should support x and y 1`] = `
"<div><span class=\\"\\"><style>
        span {
          display: block;
          height: 1px;
          width: 1px;
          margin-left: calc(5 * 16px + 1px * 4);
          margin-top: calc(1 * 16px + 1px * 0);
        }
      </style></span><span class=\\"\\"><style>
        span {
          display: block;
          height: 1px;
          width: 1px;
          margin-left: calc(15 * 16px + 1px * 14);
          margin-top: calc(1 * 16px + 1px * 0);
        }
      </style></span><span class=\\"\\"><style>
        span {
          display: block;
          height: 1px;
          width: 1px;
          margin-left: calc(1 * 16px + 1px * 0);
          margin-top: calc(15 * 16px + 1px * 14);
        }
      </style></span><span class=\\"\\"><style>
        span {
          display: block;
          height: 1px;
          width: 1px;
          margin-left: calc(1 * 16px + 1px * 0);
          margin-top: calc(2 * 16px + 1px * 1);
        }
      </style></span></div>"
`;

exports[`Spacer should work with float 1`] = `
"<div><span class=\\"\\"><style>
        span {
          display: block;
          height: 1px;
          width: 1px;
          margin-left: calc(2.2 * 16px + 1px * 1.2000000000000002);
          margin-top: calc(1 * 16px + 1px * 0);
        }
      </style></span><span class=\\"\\"><style>
        span {
          display: block;
          height: 1px;
          width: 1px;
          margin-left: calc(1.5 * 16px + 1px * 0.5);
          margin-top: calc(1 * 16px + 1px * 0);
        }
      </style></span><span class=\\"\\"><style>
        span {
          display: block;
          height: 1px;
          width: 1px;
          margin-left: calc(1 * 16px + 1px * 0);
          margin-top: calc(0.1 * 16px + 1px * -0.9);
        }
      </style></span><span class=\\"\\"><style>
        span {
          display: block;
          height: 1px;
          width: 1px;
          margin-left: calc(1 * 16px + 1px * 0);
          margin-top: calc(1.8 * 16px + 1px * 0.8);
        }
      </style></span></div>"
`;

exports[`Spacer should work with inline mode 1`] = `
"<span class=\\"\\"><style>
        span {
          display: inline-block;
          height: 1px;
          width: 1px;
          margin-left: calc(1 * 16px + 1px * 0);
          margin-top: calc(1 * 16px + 1px * 0);
        }
      </style></span>"
`;
